--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
 sonar.projectKey=let-do-it
 sonar.projectNam=let-do-it
+sonar.host.url=https://sonarqube.ektechsoftwaresolution.com/
+sonar.sources=./Dockerfile
+sonar.projectVersion=1.1.1
